--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,7 +19,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibFile,LibMedia"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -38,7 +38,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "6.6.3"
+ext.moduleVersionName = "6.6.4"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.coremoduleInfo = [
