--- a/dependencies_common.gradle
+++ b/dependencies_common.gradle
@@ -6,7 +6,7 @@ ext.commonmoduleInfo = [
                 "version"            : "6.6.8",
                 "artifactId"         : "common-debug",
                 "apidependenciesList": [
-                        "Framework", "CommonPraise", "CommonList", "CommonAceEditor", "CommonWebview",
+                        "Framework", "CommonPraise", "CommonList", "CommonAceEditor", "CommonWebview", "CommonPermission",
                         "LibScreenWrapper"
                 ]
         ],
