优化相册选择图片、截图、保存及Uri与文件转化相关逻辑、优化Wi-Fi敏感信息获取频率

--- a/dependencies_lib.gradle
+++ b/dependencies_lib.gradle
@@ -13,7 +13,7 @@ ext.libmoduleInfo = [
                         "LibBlockTask", "LibOkhttpWrapper", "LibDataRepository", "LibCoroutines",
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibBottomTab",
-                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibPermission",
+                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibPermission", "LibMedia",
                         "LibImmersive", "LibFloatview", "LibTextView", "LibAceEditor", "LibViewPager",
                         "LibSvga", "LibAudioPlayer", "LibCustomView", "LibAAFResource", "LibTheme", "LibColor", "LibPanel"]
         ],
@@ -305,8 +305,8 @@ ext.libmoduleInfo = [
                 "artifactId"         : "lib-dialog",
                 "apidependenciesList": [
                         project.androidsupport.constraintlayout,
-                        "LibThread", "LibMedia", "LibOS", "LibAAFResource", "LibText", "LibViewExt",
-                        "LibBlockTask", "LibTheme"
+                        "LibThread", "LibOS", "LibAAFResource", "LibText", "LibViewExt", "LibBlockTask", "LibTheme",
+                        "LibMedia"
                 ]
         ],
         "LibNotification"           : [
