--- a/dependencies_common.gradle
+++ b/dependencies_common.gradle
@@ -14,7 +14,7 @@ ext.commonmoduleInfo = [
                 "version"            : "6.6.14",
                 "artifactId"         : "common-wrapper",
                 "apidependenciesList": [
-                        "CommonFeedback", "CommonSplash", "CommonPhotos", "CommonWebview",
+                        "CommonFeedback", "CommonSplash", "CommonPhotos", "CommonPhotosCrop", "CommonWebview",
                         "CommonNetwork", "CommonPraise", "CommonAbout", "CommonList", "CommonAceEditor",
                         "CommonSvga", "CommonBottomTab", "CommonNavigationDrawer", "CommonShare", "CommonMessage",
                         "CommonQRCode", "CommonAccessibility", "CommonPermission", "CommonPanel", "CommonMedia"
@@ -106,6 +106,13 @@ ext.commonmoduleInfo = [
         "CommonSplash"          : [
                 "version"            : "6.6.13",
                 "artifactId"         : "common-splash",
+                "apidependenciesList": [
+                        "Framework"
+                ]
+        ],
+        "CommonPhotosCrop"      : [
+                "version"            : "6.6.13",
+                "artifactId"         : "common-photos-crop",
                 "apidependenciesList": [
                         "Framework"
                 ]
