--- a/dependencies_common.gradle
+++ b/dependencies_common.gradle
@@ -11,7 +11,7 @@ ext.commonmoduleInfo = [
                 ]
         ],
         "CommonWrapper"         : [
-                "version"            : "6.7.1git",
+                "version"            : "6.7.1",
                 "artifactId"         : "common-wrapper",
                 "apidependenciesList": [
                         "CommonFeedback", "CommonSplash", "CommonPhotos", "CommonWebview", "CommonNetwork",
@@ -169,7 +169,7 @@ ext.commonmoduleInfo = [
                 ]
         ],
         "CommonCrop"            : [
-                "version"            : "6.7.1git",
+                "version"            : "6.7.1",
                 "artifactId"         : "common-crop",
                 "apidependenciesList": [
                         "Framework", "CommonBottomTab", "CommonMedia"
