--- a/build_module.gradle
+++ b/build_module.gradle
@@ -135,7 +135,7 @@ def getPublishCommand() {
 
         System.err.println("git checkout -b build_temp && " + "echo \"" + resultList + "\"  | xargs -I {} /bin/bash ./build_upload.sh {} " + zixieVersionName + "\n\n")
         System.err.println("git checkout master && git merge build_temp --squash && git commit -am'auto update to version ${zixieVersionName} by build.sh'\n\n")
-        System.err.println("git tag -a Tag_AAF_${zixieVersionName} -m 'auto update to version ${zixieVersionName} by build.sh' && git tag -l &&  git push origin Tag_AAF_${zixieVersionName} && git push")
+        System.err.println("git tag -a Tag_AAF_${zixieVersionName} -m 'auto update to version ${zixieVersionName} by build.sh' && git tag --sort=-v:refname -l &&  git push origin Tag_AAF_${zixieVersionName} && git push")
         System.err.println("\n\n========================================\n\n")
     } else {
         System.err.println("组件依赖关系处理已完成，没有组件需要更新...")
