--- a/dependencies_aaf_config.gradle
+++ b/dependencies_aaf_config.gradle
@@ -58,8 +58,10 @@ ext {
     ]
 
     ffmpeg = [
-            min: "com.arthenica:mobile-ffmpeg-min:4.4.LTS",
-            min_gpl: "com.arthenica:mobile-ffmpeg-min-gpl:4.4.LTS"
+
+            min    : "com.arthenica:mobile-ffmpeg-min:4.4.LTS",
+            min_gpl: "com.arthenica:mobile-ffmpeg-min-gpl:4.4.LTS",
+            final  : "com.arthenica:mobile-ffmpeg-min:4.4.LTS",
     ]
 
     metadata = [
