优化Tips 类型的toast、DialogUtils 支持外部传入dialog、Widget 选择Dialog展示异常修复

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1717/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1718/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1719/content/" }
     }
 
     dependencies {
@@ -34,6 +36,9 @@ allprojects {
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1717/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1718/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1719/content/" }
+
     }
 
     afterEvaluate { Project subproject ->
