Build Version 梳理

--- a/dependencies_lib.gradle
+++ b/dependencies_lib.gradle
@@ -84,7 +84,7 @@ ext.libmoduleInfo = [
                 "version"            : "6.7.15",
                 "artifactId"         : "lib-encrypt",
                 "apidependenciesList": [
-                        "LibLog", "LibCommonUtils"
+                        "LibLog", "LibCommonUtils","LibOS"
                 ]
         ],
         "LibChannel"                : [
