--- a/dependencies_lock_widget.gradle
+++ b/dependencies_lock_widget.gradle
@@ -5,15 +5,15 @@ ext.widgetmoduleInfo = [
         "version"            : "6.8.5",
         "artifactId"         : "lib-wrapper-screen",
         "apidependenciesList": [
-            "LibWidget"
+                "LibWidget", "LibLockScreen"
         ]
     ],
     "LibWidget"       : [
         "version"            : "6.8.5",
         "artifactId"         : "lib-widget",
         "apidependenciesList": [
-            "LibLockScreen",
-            project.androidsupport.worker
+                "LibLog", "LibConfig", "LibOS", "LibDialog",
+                project.androidsupport.worker
         ]
     ],
     "LibLockScreen"   : [
