--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,8 +19,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application,LibLockScreen"
-
+ext.developModule = "Application,LibLockScreen, LibWidget,LibAceEditor,LibAudioPlayer,LibDeviceNetwork, LibEncrypt,LibMedia"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
