修复子线程创建的alertDialog 无法dismiss 的bug

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1741/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1742/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1743/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1744/content/" }
 
     }
 
@@ -35,6 +38,9 @@ allprojects {
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1741/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1742/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1743/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1744/content/" }
     }
 
     afterEvaluate { Project subproject ->
