--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,18 @@ apply from: rootDir.toString() + '/build_module.gradle'
 System.err.println("MainProjectList: " + zixieMainProject)
 System.err.println("DevProjectList: " + zixieDevelopModule)
 
+if (zixieIsPublish) {
+    if (zixieMainProject.contains(",") || zixieDevelopModule.contains(",") || !zixieMainProject.equals(zixieDevelopModule)) {
+        throw new Exception("\n\n================== AAF 构建异常 ======================\n" +
+                "当前为组件发布模式，此时会启动编译加速，此时：dependencies.gradle 中 ：\n" +
+                "1. ext.mainProject 与 ext.developModule 必须一致  \n" +
+                "2. ext.includeALLDependOnDevelopModule 必须为 false \n\n" +
+                "关闭发布模式，请将 dependencies.gradle 中 ext.isPublish 设为  false：\n" +
+                "================== AAF 构建异常 ======================\n\n"
+        )
+    }
+}
+
 zixieMainProject.split(",").each { projectName ->
     addInclude(projectName)
 }
