构建脚本提速优化

--- a/build_module.gradle
+++ b/build_module.gradle
@@ -18,7 +18,7 @@ ext {
     zixieVersionName = ext.moduleVersionName
     zixieModuleInfo = ext.moduleInfo
     zixieModules = new ArrayList<>()
-    zixieIsDebug = true
+    zixieIsDebug = false
     zixieIsPublish = ext.isPublish
     zixieIncludeALL = includeALLDependOnDevelopModule
     zixieIncludeList = new ArrayList()
